--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,6 +23,10 @@ jobs:
       with:
         python-version: "3.10"
     
+    - name: Create virtual environment
+      run: |
+        uv venv
+    
     - name: Install dependencies
       run: |
         uv pip install -e ".[dev]"
