--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
+    - name: Create virtual environment
+      run: |
+        uv venv
+    
     - name: Install dependencies
       run: |
         uv pip install -e ".[dev]"
