--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "watchdog>=3.0.0",
     "python-dotenv>=1.0.0",
     "pillow>=10.0.0",
+    "boto3>=1.28.0",
 ]
 
 [project.scripts]
@@ -20,6 +21,7 @@ dev = [
     "pytest-cov>=4.0.0",
     "black>=23.0.0",
     "ruff>=0.1.0",
+    "moto[s3]>=4.0.0",
 ]
 
 [build-system]
